# rocq-ditto

./: Makefile  README.md  configure.sh  constructive-plugin.opam  coq-ditto.opam  ditto-cli-lib.opam  ditto-config.opam  ditto-plugin.opam  ditto-test-plugin.opam  dune  dune-project  get-basic-tactics-plugin.opam  get-dependencies.opam  json-dump-plugin.opam  lens-query-plugin.opam  neat-fcc-plugin.opam  shelley-plugin.opam  target-generator-plugin.opam
.github/workflows/: ci.yml
lib/: code_range.ml  code_range.mli  compile.ml  compile.mli  constructivisation.ml  proof.ml  proof.mli  rocq_document.ml  rocq_document.mli  rocq_to_lean.ml  runner.ml  runner.mli  syntax_node.ml  syntax_node.mli  theorem_query.ml  theorem_query.mli  transformations.ml  transformations.mli
plugins/constructive_plugin/: main.ml
plugins/coq_ditto/: cli.ml  coq_ditto_plugin.ml  coq_ditto_wrapper.ml
plugins/shelley/: main.ml
test/: test_range_utils.ml
test/fixtures/unit_test_fixtures/: ex_explicit_induction_long_inductive.v  ex_explicit_induction_long_inductive_target.v
test/test_plugin/: main.ml
tools/: dune  main.ml
